feature# 新增electron-builder 配置文件 fix# 修复关闭服务器时无响应问题

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec npm run app",
     "app": "electron main.js",
-    "build": "electron-builder"
+    "build": "electron-builder --config builder.js"
   },
   "author": "ErpanOmer",
   "license": "ISC",
@@ -23,10 +23,5 @@
   },
   "dependencies": {
     "http-proxy": "^1.18.1"
-  },
-  "build": {
-    "directories": {
-      "output": "package"
-    }
   }
 }
