--- a/package.json
+++ b/package.json
@@ -2,26 +2,62 @@
   "name": "proxy-tool",
   "version": "1.0.0",
   "description": "electron proxy tool",
-  "main": "main.js",
-  "scripts": {
-    "dev": "nodemon --exec npm run app",
-    "app": "electron main.js",
-    "build": "electron-builder --config builder.js"
-  },
   "author": "ErpanOmer",
   "license": "ISC",
+  "config-overrides-path": "render.config.js",
+  "main": "main.js",
+  "scripts": {
+    "dev": "run-p dev:render wait-electron",
+    "dev:render": "react-app-rewired start",
+    "dev:main": "nodemon --exec npm run dev:electron",
+    "dev:electron": "electron .",
+    "build": "run-s build:render build:electron",
+    "build:render": "react-app-rewired build",
+    "build:electron": "electron-builder --config electron.builder.js",
+    "wait-dev-server": "wait-on -c wait.js",
+    "wait-electron": "run-s wait-dev-server dev:main"
+  },
+  "dependencies": {
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.37",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "http-proxy": "^1.18.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.5.2",
+    "web-vitals": "^1.1.2"
+  },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "customize-cra": "^1.0.0",
     "electron": "^16.0.2",
     "electron-builder": "^22.14.5",
-    "eslint": "^8.3.0",
+    "env-cmd": "^10.1.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "fs-extra": "^10.0.0",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.0"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.5.0",
+    "react-app-rewired": "^2.1.8",
+    "wait-on": "^6.0.0"
   },
-  "dependencies": {
-    "http-proxy": "^1.18.1"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
