chore# 更加完善自动化部署 chore# 客户端安装包自动部署到阿里云-oss feature# 新增客户端icon

--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "proxy-tool",
+  "name": "front-proxy",
   "version": "1.0.0",
-  "description": "electron proxy tool",
+  "description": "electron front proxy",
   "author": "ErpanOmer",
   "license": "ISC",
   "dependencies": {
-    "http-proxy": "^1.18.1"
+    "http-proxy": "^1.18.1",
+    "compressing": "^1.5.1"
   }
 }
