--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "proxy-tool",
+  "name": "front-proxy",
   "version": "1.0.0",
-  "description": "electron proxy tool",
+  "description": "electron front proxy",
   "author": "ErpanOmer",
   "license": "ISC",
   "config-overrides-path": "render.config.js",
@@ -22,6 +22,7 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "D": "^1.0.0",
     "http-proxy": "^1.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -33,6 +34,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ali-oss": "^6.16.0",
+    "compressing": "^1.5.1",
     "customize-cra": "^1.0.0",
     "electron": "^16.0.2",
     "electron-builder": "^22.14.5",
