chore: 新增环境变量 chroe: 目录结构调整 chroe: 新增electron增量升级模块 chroe: 优化部署有关代码

--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
   "license": "ISC",
   "dependencies": {
     "http-proxy": "^1.18.1",
-    "compressing": "^1.5.1"
+    "compressing": "^1.5.1",
+    "semver": "^7.3.5"
   }
 }
