--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "@alicloud/pop-core": "^1.7.10",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
